[gd_scene load_steps=4 format=3 uid="uid://bw8m5x2n9p4q1"]

[ext_resource type="Script" path="res://scenes/game_systems/zones/zone_action_button/zone_action_button.gd" id="1_action_btn"]
[ext_resource type="Texture2D" uid="uid://4q335xxs2p" path="res://icon.svg" id="2_icon"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn"]
bg_color = Color(0.2, 0.2, 0.25, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.5, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ZoneActionButton" type="Button"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
custom_minimum_size = Vector2(200, 80)
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
script = ExtResource("1_action_btn")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="IconTexture" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_icon")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Action Name"
vertical_alignment = 1

[node name="LockIndicator" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="LockIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="LockIcon" type="Label" parent="LockIndicator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
text = "ðŸ”’ LOCKED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CompletedIndicator" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CompletedLabel" type="Label" parent="CompletedIndicator"]
layout_mode = 1
anchors_preset = 4
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -60.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 25.0
text = "âœ“"
horizontal_alignment = 1
vertical_alignment = 1

